vault-pki-secrets-engine/kubernetes_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashibank-web-v2
  namespace: my-vault-demo
spec:
  ingressClassName: nginx
  rules:
    - host: demov2.hashibank.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hashibank
                port:
                  number: 8080
            path: /
  tls:
  - hosts:
    - demov2.hashibank.com
    secretName: demo-hashibank-com-tls-v2
